--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@stripe/stripe-js": "^1.36.0",
+    "antd": "^4.23.3",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.2.5",
