--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.1",
     "sass": "^1.54.8",
-    "stripe": "^10.7.0"
+    "stripe": "^10.7.0",
+    "utils": "^0.3.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.14",
@@ -28,5 +32,10 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.2.5",
     "typescript": "^4.8.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
